--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -26,3 +26,34 @@ ru:
         state_event: 'Действие'
         created_at: 'Дата создания'
         updated_at: 'Дата обновления'
+        phone: 'Телефон'
+        institute: 'ВУЗ'
+        start_year: 'Начало обучения'
+        finish_year: 'Окончание обучения'
+        department: 'Факультет'
+        profession: 'Специальность'
+        degree: 'Степень'
+        gpa: 'Средний балл диплома'
+        camp_time: 'Есть ли в период с 11.07.2012 по 17.07.2012 у меня свободное время?'
+        camp_life: 'Готов ли я в период с 11.07.2012 по 17.07.2012 жить в лагере, соблюдать правила внутреннего распорядка, и выполнять представленные организаторами проекты?'
+        camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
+        camp_notebook: 'Есть ли у меня ноутбук/нетбук достаточной мощности для разработки проекта?'
+        camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно?'
+      'member/skill':
+        level: 'Уровень'
+        duration: 'Сколько лет/месяцев используете'
+        description: 'Комментарии'
+      'member/lang':
+        language: 'Язык'
+        level: 'Уровень'
+      'member/job':
+        company: 'Название компании'
+        started_at: 'Дата начало работы'
+        finished_at: 'Дата окончания работы'
+        job: 'Должность'
+        responsibility: 'Обязанности'
+        achievements: 'Достижения'
+      'member/additional_education':
+        description: 'Название курсов, год прохождения'
+      'member/achievement':
+        description: 'Название, год получения'
