--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,3 +6,20 @@ ru:
         members_list: 'Список участников'
     application:
       new_member: 'Добавить анкету'
+  web:
+    members:
+      form:
+        education: 'ОБРАЗОВАНИЕ'
+        additional_educations: 'ДОПОЛНИТЕЛЬНОЕ ОБРАЗОВАНИЕ (КУРСЫ И Т.Д.)'
+        achievements: 'СЕРТИФИКАТЫ, ДИПЛОМЫ, ДОСТИЖЕНИЯ (В Т.Ч. ПАТЕНТЫ, И Т.П.)'
+        langs: 'ИНОСТРАННЫЕ ЯЗЫКИ'
+        skill: 'НАВЫКИ И УМЕНИЯ'
+        skills:
+          program_lang: 'ЯЗЫКИ ПРОГРАММИРОВАНИЯ'
+          database: 'БАЗЫ ДАННЫХ'
+          os: 'ОПЕРАЦИОННЫЕ СИСТЕМЫ'
+          ide: 'IDE'
+          other: 'ДРУГИЕ ИНСТРУМЕНТЫ'
+        job: 'ОПЫТ РАБОТЫ ПРОГРАММИСТОМ ИЛИ ИТ-СПЕЦИАЛИСТОМ'
+        camp: 'НАЛИЧИЕ ВОЗМОЖНОСТЕЙ УЧАСТИЯ В DEADLINE.CAMP'
+        add: 'Добавить'
