#2 added all fields

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -39,6 +39,8 @@ ru:
         camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
         camp_notebook: 'Есть ли у меня ноутбук/нетбук достаточной мощности для разработки проекта?'
         camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно?'
+        hobby: 'Хобби'
+        sport: 'Спорт'
       'member/skill':
         level: 'Уровень'
         duration: 'Сколько лет/месяцев используете'
@@ -56,4 +58,6 @@ ru:
       'member/additional_education':
         description: 'Название курсов, год прохождения'
       'member/achievement':
+        description: 'Название, год получения'
+      'member/other':
         description: 'Название, год получения'
