--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,3 +23,6 @@ ru:
         job: 'ОПЫТ РАБОТЫ ПРОГРАММИСТОМ ИЛИ ИТ-СПЕЦИАЛИСТОМ'
         camp: 'НАЛИЧИЕ ВОЗМОЖНОСТЕЙ УЧАСТИЯ В DEADLINE.CAMP'
         add: 'Добавить'
+        hobby: 'ХОББИ, УВЛЕЧЕНИЯ'
+        other: 'ДРУГОЕ'
+        preference: 'НА КАКОЙ ИЗ ТЕХНОЛОГИЙ ВЫ БЫ ПРЕДПОЧЛИ РАЗРАБАТЫВАТЬ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ?'
