--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -5,3 +5,10 @@ ru:
         members:
           create:
             success: 'Анкета отправлена на модерацию'
+        admin:
+          sessions:
+            create:
+              authenticate_error: 'Неправильный email или пароль.'
+          members:
+            update:
+              success: 'Анкета отредактированна.'
