--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,3 +26,7 @@ ru:
         hobby: 'ХОББИ, УВЛЕЧЕНИЯ'
         other: 'ДРУГОЕ'
         preference: 'НА КАКОЙ ИЗ ТЕХНОЛОГИЙ ВЫ БЫ ПРЕДПОЧЛИ РАЗРАБАТЫВАТЬ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ?'
+    admin:
+      sessions:
+        new:
+          login: 'Войти'
