fixed translates and member other skill model

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -38,13 +38,17 @@ ru:
         camp_life: 'Готов ли я в период с 9.07.2012 по 16.07.2012 жить в лагере, соблюдать правила внутреннего распорядка, и выполнять представленные организаторами проекты?'
         camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
         camp_notebook: 'Есть ли у меня ноутбук/нетбук достаточной мощности для разработки проекта?'
-        camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно(настройка среды разработки, установка необходимого ПО)?'
+        camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно (настройка среды разработки, установка необходимого ПО)?'
         hobby: 'Хобби'
         sport: 'Спорт'
       'member/skill':
         level: 'Уровень'
         duration: 'Сколько лет/месяцев используете'
         description: 'Комментарии'
+      'member/skill_other':
+        level: 'Уровень'
+        duration: 'Сколько лет/месяцев используете'
+        description: 'Где и как использовали: проекты, достижения, технологии'
       'member/lang':
         language: 'Язык'
         level: 'Уровень'
