--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,11 @@
 ru:
   base_name: 'Смена Deadline'
+  language:
+    levels:
+      - не владею
+      - базовые знания
+      - читаю техническую литературу
+      - свободно владею
   sure: 'Вы уверены?'
   layouts:
     admin:
@@ -22,7 +28,7 @@ ru:
           ide: 'IDE'
           other: 'ДРУГИЕ ИНСТРУМЕНТЫ'
         job: 'ОПЫТ РАБОТЫ ПРОГРАММИСТОМ ИЛИ ИТ-СПЕЦИАЛИСТОМ'
-        camp: 'НАЛИЧИЕ ВОЗМОЖНОСТЕЙ УЧАСТИЯ В DEADLINE.CAMP'
+        camp: 'НАЛИЧИЕ ВОЗМОЖНОСТЕЙ УЧАСТИЯ В СМЕНЕ DEADLINE'
         add: 'Добавить'
         hobby: 'ХОББИ, УВЛЕЧЕНИЯ'
         other: 'ДРУГОЕ'
