--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -42,11 +42,11 @@ ru:
         hobby: 'Хобби'
         sport: 'Спорт'
       'member/skill':
-        level: 'Уровень'
+        level: 'Уровень (максимальный - 10)'
         duration: 'Сколько лет/месяцев используете'
         description: 'Комментарии'
       'member/skill_other':
-        level: 'Уровень'
+        level: 'Уровень (максимальный - 10)'
         duration: 'Сколько лет/месяцев используете'
         description: 'Где и как использовали: проекты, достижения, технологии'
       'member/lang':
