--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,27 +12,28 @@ ru:
       application:
         members_list: 'Список участников'
     application:
-      new_member: 'Добавить анкету'
+      new_member: 'Я пойду'
   web:
     members:
       form:
-        education: 'ОБРАЗОВАНИЕ'
-        additional_educations: 'ДОПОЛНИТЕЛЬНОЕ ОБРАЗОВАНИЕ (КУРСЫ И Т.Д.)'
-        achievements: 'СЕРТИФИКАТЫ, ДИПЛОМЫ, ДОСТИЖЕНИЯ (В Т.Ч. ПАТЕНТЫ, И Т.П.)'
-        langs: 'ИНОСТРАННЫЕ ЯЗЫКИ'
-        skill: 'НАВЫКИ И УМЕНИЯ'
+        contact_info: 'Контактная информация'
+        education: 'Образование'
+        additional_educations: 'Дополнительное образование (курсы и т.д.)'
+        achievements: 'Сертификаты, дипломы, достижения (в т.ч. патенты, и т.п.)'
+        langs: 'Иностранные языка'
+        skill: 'Навыки и умения'
         skills:
-          program_lang: 'ЯЗЫКИ ПРОГРАММИРОВАНИЯ'
-          database: 'БАЗЫ ДАННЫХ'
-          os: 'ОПЕРАЦИОННЫЕ СИСТЕМЫ'
+          program_lang: 'Языки программирования'
+          database: 'Базы данных'
+          os: 'Операционные системы'
           ide: 'IDE'
-          other: 'ДРУГИЕ ИНСТРУМЕНТЫ'
-        job: 'ОПЫТ РАБОТЫ ПРОГРАММИСТОМ ИЛИ ИТ-СПЕЦИАЛИСТОМ'
-        camp: 'НАЛИЧИЕ ВОЗМОЖНОСТЕЙ УЧАСТИЯ В СМЕНЕ DEADLINE'
+          other: 'Другие инструменты'
+        job: 'Опыт работы программистом или ИТ-специалистом'
+        camp: 'Наличие возможностей участия в Смене Deadline'
         add: 'Добавить'
-        hobby: 'ХОББИ, УВЛЕЧЕНИЯ'
-        other: 'ДРУГОЕ'
-        preference: 'НА КАКОЙ ИЗ ТЕХНОЛОГИЙ ВЫ БЫ ПРЕДПОЧЛИ РАЗРАБАТЫВАТЬ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ?'
+        hobby: 'Хобби, увлечения'
+        other: 'Сертификаты, дипломы, достижения, не относящиеся к ИТ'
+        preference: 'На какой из технологий вы бы предпочли разрабатывать программное обеспечение?'
     admin:
       sessions:
         new:
