--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -14,6 +14,8 @@ ru:
           attributes:
             email:
               email: 'Введите корректный email'
+            phone:
+              phone: 'Введите корректный номер телефона'
     models:
       member: 'Участник'
     attributes:
