--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -34,6 +34,9 @@ ru:
         hobby: 'Хобби, увлечения'
         other: 'Сертификаты, дипломы, достижения, не относящиеся к ИТ'
         preference: 'На какой из технологий вы бы предпочли разрабатывать программное обеспечение?'
+        phone:
+         title: 'Введите действующий телефон'
+         content: 'Формат телефона +7-902-123-45-67'
     admin:
       sessions:
         new:
