--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,7 +20,7 @@ ru:
         education: 'Образование'
         additional_educations: 'Дополнительное образование (курсы и т.д.)'
         achievements: 'Сертификаты, дипломы, достижения (в т.ч. патенты, и т.п.)'
-        langs: 'Иностранные языка'
+        langs: 'Иностранные языки'
         skill: 'Навыки и умения'
         skills:
           program_lang: 'Языки программирования'
