--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -39,6 +39,13 @@ ru:
          content: 'Формат телефона +7-902-123-45-67'
         study_start: 'Начало обучения'
         study_finish: 'Окончание обучения'
+        month: 'Месяц'
+        year: 'Год'
+        camp_time: 'Есть ли в период с 9.07.2012 по 16.07.2012 у меня свободное время?'
+        camp_life: 'Готов ли я в период с 9.07.2012 по 16.07.2012 жить в лагере, соблюдать правила внутреннего распорядка, и выполнять представленные организаторами проекты?'
+        camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
+        camp_notebook: 'Есть ли у меня ноутбук/нетбук достаточной мощности для разработки проекта?'
+        camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно (настройка среды разработки, установка необходимого ПО)?'
     admin:
       sessions:
         new:
