fixes #28. button name

--- a/config/locales/helpers.ru.yml
+++ b/config/locales/helpers.ru.yml
@@ -2,7 +2,7 @@ ru:
   helpers:
     submit:
       member:
-        create: 'Создать'
+        create: 'Отправить заявку'
         update: 'Сохранить'
       user:
         create: 'Создать'
