fixes #36. footer contacts

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,6 +7,8 @@ ru:
       - читаю техническую литературу
       - свободно владею
   sure: 'Вы уверены?'
+  contacts:
+    phone: 'Телефон для справок: 97-18-47'
   member_mailer:
     welcome:
       subject: "Добро подаловать на Смену Dealine"
