--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,6 +6,14 @@ ru:
       - базовые знания
       - читаю техническую литературу
       - свободно владею
+  skill:
+    levels:
+      - поверхностные знания
+      - читал тех.литературу
+      - прошел курс обучения
+      - разработал приложение
+      - разработал более 2-х приложений
+      - разрабатываю более года
   sure: 'Вы уверены?'
   contacts:
     phone: 'Телефон для справок: 97-18-47'
