--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -7,3 +7,7 @@ ru:
       mark: '*'
     error_notification:
       default_message: "Были обнаружены следующие ошибки:"
+    labels:
+      member:
+        study_start: 'Начало обучения'
+        study_finish: 'Окончание обучения'
