--- a/config/locales/helpers.ru.yml
+++ b/config/locales/helpers.ru.yml
@@ -4,6 +4,9 @@ ru:
       member:
         create: 'Отправить заявку'
         update: 'Сохранить'
+      page:
+        create: 'Создать'
+        update: 'Сохранить'
       user:
         create: 'Создать'
         update: 'Сохранить'
