--- a/config/locales/helpers.ru.yml
+++ b/config/locales/helpers.ru.yml
@@ -10,3 +10,6 @@ ru:
       user:
         create: 'Создать'
         update: 'Сохранить'
+      news:
+        create: 'Создать'
+        update: 'Сохранить'
