--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -14,6 +14,14 @@ ru:
       - разработал приложение
       - разработал более 2-х приложений
       - разрабатываю более года
+  skills:
+    os:
+      levels:
+        - поверхностные знания
+        - читаю тех.литературу
+        - прошел курс обучения
+        - продвинутый пользователь
+        - разрабатывал приложения под ОС
   sure: 'Вы уверены?'
   new: 'Новый'
   registration: Регистрация
