--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -33,6 +33,8 @@ ru:
       subject: "Добро пожаловать на Смену Dealine"
     approved:
       subject: "Смена Deadline: ваша заявка подтверждена"
+    remind_password:
+      subject: "Восстановление пароля"
   layouts:
     shared:
       navbar:
@@ -82,6 +84,7 @@ ru:
       new:
         login: 'Войти'
         authenticate: 'Вход'
+        password_forgot: 'Забыли пароль?'
     members:
       new:
         already_have_account: "Я уже зарегистрирован"
@@ -92,3 +95,8 @@ ru:
       sessions:
         new:
           login: 'Войти'
+    account:
+      remind_passwords:
+        new:
+          password_remind: 'Напомнить пароть'
+          remind: 'Отправить'
