fixed reset password translates

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -74,6 +74,7 @@ ru:
     phone:
      title: 'Введите действующий телефон'
      content: 'Формат телефона +7-902-123-45-67'
+    reset_password: 'Сменить пароль'
     camp_time: 'Есть ли в период с 9.07.2012 по 16.07.2012 у меня свободное время?'
     camp_life: 'Готов ли я в период с 9.07.2012 по 16.07.2012 жить в лагере, соблюдать правила внутреннего распорядка, и выполнять представленные организаторами проекты?'
     camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
@@ -100,3 +101,7 @@ ru:
         new:
           password_remind: 'Напомнить пароть'
           remind: 'Отправить'
+      passwords:
+        edit:
+          reset_password: 'Смена пароля'
+          reset: 'Сменить пароль'
