--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -16,6 +16,9 @@ ru:
             create:
               success: 'На указанный email отправлено письмо с инструкцией.'
               error: 'Аккаунт с указанным email не найден.'
+          passwords:
+            update:
+              success: 'Пароль успешно сменен.'
         admin:
           sessions:
             create:
