--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -109,3 +109,5 @@ ru:
     errors:
       not_found:
         not_found: "Страница не найдена"
+      internal_server_error:
+        internal_server_error: "Похоже что-то сломалось."
