added group to member

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -57,6 +57,7 @@ ru:
         finish_year: 'Окончание обучения'
         department: 'Факультет'
         profession: 'Специальность'
+        group: 'Группа'
         degree: 'Степень'
         gpa: 'Средний балл диплома'
         hobby: 'Хобби'
