--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -89,7 +89,7 @@ ru:
     members:
       new:
         already_have_account: "Я уже зарегистрирован"
-        terms_of_service: 'я согласен на обработку персональных данных'
+        terms_of_service: 'Я согласен на обработку персональных данных'
     admin:
       pages:
         index:
