added how your know about as question to member

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -64,6 +64,8 @@ ru:
         sport: 'Спорт'
         password: "Пароль"
         password_confirmation: "Подтверждение пароля"
+        how_hear_about_as: "Откуда вы узнали о нас?"
+        other_how_hear_about_as: "Другое"
       'member/skill':
         level: 'Уровень'
         duration: 'Сколько лет/месяцев используете'
