--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,7 +2,6 @@ ru:
   base_name: 'Смена Deadline'
   language:
     levels:
-      - не владею # нахрена?
       - базовые знания
       - читаю техническую литературу
       - свободно владею
@@ -51,6 +50,10 @@ ru:
           pages_list: 'Список страниц'
           news_list: 'Список новостей'
   members:
+    how_hear_about_as_list:
+      - Знакомые
+      - Интернет
+      - Университет
     general_info: 'Общая информация'
     contact_info: 'Контактная информация'
     education: 'Образование'
@@ -80,6 +83,7 @@ ru:
     camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
     camp_notebook: 'Есть ли у меня ноутбук/нетбук достаточной мощности для разработки проекта?'
     camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно (настройка среды разработки, установка необходимого ПО)?'
+    how_hear_about_as: 'Откуда вы узнали о нас?'
   web:
     sessions:
       new:
