fixed admin member index html

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -101,6 +101,9 @@ ru:
       sessions:
         new:
           login: 'Войти'
+      members:
+        index:
+          preference: "Предпочтения"
     account:
       remind_passwords:
         new:
