--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -15,7 +15,8 @@ ru:
           remind_passwords:
             create:
               success: 'На указанный email отправлено письмо с инструкцией.'
-              error: 'Аккаунт с указанным email не найден.'
+              not_found: 'Аккаунт с указанным email не найден.'
+              error: 'При восстановлении пароля произошла ошибка. Пожалуйста, свяжитесь с администрацией сайта.'
           passwords:
             update:
               success: 'Пароль успешно сменен.'
