auth error fixed

--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -5,6 +5,7 @@ ru:
         sessions:
           create:
             authenticate_error: 'Неправильный email или пароль.'
+            password_error: 'При проверке пароля произошла ошибка. Попробуйте восстановить пароль.'
         members:
           create:
             success: '<b>Регистрация прошла успешно.</b> На Ваш email отправлено письмо с дальнейшей инструкцией'
