fixed auth messages

--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -4,8 +4,9 @@ ru:
       web:
         sessions:
           create:
-            authenticate_error: 'Неправильный email или пароль.'
-            password_error: 'При проверке пароля произошла ошибка. Попробуйте восстановить пароль.'
+            email_error: 'Неправильный пароль.'
+            password_error: 'Аккаунт с указанным email не найден.'
+            auth_error: 'При проверке пароля произошла ошибка. Попробуйте восстановить пароль.'
         members:
           create:
             success: '<b>Регистрация прошла успешно.</b> На Ваш email отправлено письмо с дальнейшей инструкцией'
