--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,7 +29,7 @@ ru:
     phone: 'Телефон для справок: 97-18-47'
   member_mailer:
     welcome:
-      subject: "Добро пожаловать на Смену Dealine"
+      subject: "Добро пожаловать на Смену Deadline"
     approved:
       subject: "Смена Deadline: ваша заявка подтверждена"
     remind_password:
