--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -27,11 +27,11 @@ ru:
             phone:
               phone: 'Введите корректный номер телефона'
             facebook:
-              url: 'имеет неверное значение'
+              slug: 'имеет неверное значение'
             twitter:
-              url: 'имеет неверное значение'
+              slug: 'имеет неверное значение'
             vkontakte:
-              url: 'имеет неверное значение'
+              slug: 'имеет неверное значение'
     models:
       member: 'Участник'
     attributes:
