--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -74,6 +74,10 @@ ru:
     hobby: 'Хобби, увлечения'
     other: 'Сертификаты, дипломы, достижения, не относящиеся к ИТ'
     preference: 'На какой из технологий вы бы предпочли разрабатывать программное обеспечение?'
+    phone_hint: 'Пример: +7 (902) 123 45 67'
+    facebook_hint: 'Ваш ник'
+    twitter_hint: 'Только ник'
+    vkontakte_hint: 'Ваш никнейм'
     phone:
      title: 'Введите действующий телефон'
      content: 'Формат телефона +7-902-123-45-67'
