fixed session password check

--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -4,9 +4,7 @@ ru:
       web:
         sessions:
           create:
-            password_error: 'Неправильный пароль.'
-            email_error: 'Аккаунт с указанным email не найден.'
-            auth_error: 'При проверке пароля произошла ошибка. Попробуйте восстановить пароль.'
+            auth_error: 'Аккаунт с указанным email не найден или введен неправильный пароль.'
         members:
           create:
             success: '<b>Регистрация прошла успешно.</b> На Ваш email отправлено письмо с дальнейшей инструкцией'
