added header to xls file

--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -79,6 +79,27 @@ ru:
         city: 'Город'
         birthday: 'Дата рождения'
         schoolyear_count: "Сколько курсов закончили?"
+        # decorate translates
+        education: 'Образование'
+        s_additional_educations: 'Дополнительное образование (курсы и т.д.)'
+        s_achievements: 'Сертификаты, дипломы, достижения (в т.ч. патенты, и т.п.)'
+        s_langs: 'Иностранные языки'
+        s_skill_program_langs: 'Языки программирования'
+        s_skill_databases: 'Базы данных'
+        s_skill_operation_systems: 'Операционные системы'
+        s_skill_ides: 'IDE'
+        s_skill_others: 'Другие инструменты'
+        s_jobs: 'Опыт работы программистом или ИТ-специалистом'
+        hobby: 'Хобби, увлечения'
+        s_others: 'Сертификаты, дипломы, достижения, не относящиеся к ИТ'
+        s_preferences: 'На какой из технологий вы бы предпочли разрабатывать программное обеспечение?'
+        camp_time: 'Есть ли в период с 9.07.2012 по 16.07.2012 у меня свободное время?'
+        camp_life: 'Готов ли я в период с 9.07.2012 по 16.07.2012 жить в лагере, соблюдать правила внутреннего распорядка, и выполнять представленные организаторами проекты?'
+        camp_fee: 'Готов ли я оплатить 500 рублей за участие в лагере?'
+        camp_notebook: 'Есть ли у меня ноутбук/нетбук достаточной мощности для разработки проекта?'
+        camp_training: 'Есть ли у меня время для подготовки к мероприятию самостоятельно (настройка среды разработки, установка необходимого ПО)?'
+        how_hear_about_as: 'Откуда вы узнали о нас?'
+
       'member/skill':
         level: 'Уровень'
         duration: 'Сколько лет/месяцев используете'
