--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -34,6 +34,11 @@ ru:
               success: 'Страница создана.'
             update:
               success: 'Страница отредактирована.'
+          photo_albums:
+            create:
+              success: 'Фотоальбом создан.'
+            update:
+              success: 'Фотоальбом отредактирован.'
           members:
             update:
               success: 'Анкета отредактирована.'
