--- a/config/locales/helpers.ru.yml
+++ b/config/locales/helpers.ru.yml
@@ -10,6 +10,9 @@ ru:
       user:
         create: 'Создать'
         update: 'Сохранить'
+      photo_album:
+        create: 'Создать'
+        update: 'Сохранить'
       news:
         create: 'Создать'
         update: 'Сохранить'
