--- a/config/locales/activerecord.yml
+++ b/config/locales/activerecord.yml
@@ -1,6 +1,13 @@
 ru:
   activerecord:
     state_machines:
+      news:
+        state:
+          events:
+            publish: "Опубликовать"
+          states:
+            new: "Новый"
+            published: "Опубликованный"
       photo_album:
         state:
           events:
@@ -50,6 +57,8 @@ ru:
         published_at: 'Дата публикации'
         created_at: 'Дата создания'
         updated_at: 'Дата обновления'
+        state: 'Текущее состояние'
+        state_event: 'Действие'
       page:
         id: id
         name: 'Название'
